1-ticketingAPP/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      name: auth
  template:
    metadata:
      label:
        app: auth
    spec:
      containers:
        - name: auth
          image: auriaahmad/auth
